--- a/src/features/logo/logo.component.html
+++ b/src/features/logo/logo.component.html
@@ -1,5 +1,4 @@
 <div class="logo" (click)="goToMain()">
-  <!-- <p>MSR</p> -->
-  <img class="logo-title" [srcPath]="'msr-logo-title.svg'">
+  <img class="logo-title" [srcPath]="logoTitlePath$i()">
   <img class="logo-img" [srcPath]="'msr-logo.svg'">
 </div>
