--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@ $prime-green: #4CAF50;
 $second-green: #388E3C;
 $white: #FFFFFF;
 $prime-grey: #808080;
+$transparent-grey: #80808040;
 $text-color: #333333;
 // Основной цвет (Темно-синий/$prime-blue): 40% - Для шапки, подвала и важных элементов управления.
 // Второстепенный цвет (Серый/$prime-grey:hover $second-green): 30% - Фон страниц, панели навигации и вспомогательные элементы.
