--- a/src/pages/authorization/components/authorization.component.html
+++ b/src/pages/authorization/components/authorization.component.html
@@ -2,11 +2,19 @@
 
 <div class="wrapper">
   <div class="container">
-    <h2>Registration</h2>
+    <h2 [text]="{
+      ENG: 'Authorization',
+      ESP: 'Authorization',
+      RUS: 'Авторизация',
+    }">Authorization</h2>
 
     <form [formGroup]="authForm" (ngSubmit)="onSubmit()" (keyup.enter)="onSubmit()">
       <div class="form-group">
-        <label for="name">Username or email</label>
+        <label for="name" [text]="{
+          ENG: 'Username or email',
+          ESP: 'Ddfsrd ',
+          RUS: 'Логин или email',
+        }">Username or email</label>
         <input type="text" id="name" formControlName="login"
           [class.validation-error]="isValidControl('login')">
           @if (isValidControl('login')) {
@@ -15,7 +23,11 @@
       </div>
 
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password" [text]="{
+          ENG: 'Password',
+          ESP: 'Pass',
+          RUS: 'Пароль',
+        }">Password</label>
         <input #password type="password" id="password" formControlName="password"
           [class.validation-error]="isValidControl('password')">
           @if (isValidControl('password')) {
@@ -23,7 +35,11 @@
           }
       </div>
 
-      <button type="submit" class="btn btn-primary">Log in</button>
+      <button type="submit" class="btn-primary" [text]="{
+        ENG: 'Log in',
+        ESP: 'Pass',
+        RUS: 'Войти',
+      }">Log in</button>
     </form>
   </div>
 </div>
