--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,29 +1,29 @@
 @import 'variables';
 
-@mixin lu-scrollbar($width: 15, $height: 15) {
+@mixin org-scrollbar($width: 15, $height: 15) {
   &::-moz-scrollbar,
   &::-moz-scrollbar-thumb {
-    width: pix($width);
-    height: pix($height);
-    border-radius: $org-border-radius;
+    width: 15px;
+    height: 15px;
+    border-radius: 8px;
     background-clip: padding-box;
-    border: pix(5) solid transparent;
+    border: 5px solid transparent;
   }
   &::-moz-scrollbar-thumb {
     box-shadow: inset 0 0 0 pix(5);
-    color: $prime-grey;
+    color: #808080;
   }
   &::-webkit-scrollbar,
   &::-webkit-scrollbar-thumb {
-    width: pix($width);
-    height: pix($height);
-    border-radius: $org-border-radius;
+    width: 15px;
+    height: 15px;
+    border-radius: 8px;
     background-clip: padding-box;
-    border: pix(5) solid transparent;
+    border: 5px solid transparent;
   }
   &::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 0 pix(5);
-    color: $prime-grey;
+    box-shadow: inset 0 0 0 5px;
+    color: #808080;
   }
 }
 
@@ -66,10 +66,18 @@
     @content;
   }
 }
+
 @mixin glass-bg {
   background-color: rgba(228, 228, 228, 0.7);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+}
+
+@mixin org-border {
+  border: 1px solid #808080; // $prime-grey
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 30px;
 }
 
 @mixin unselectable {
