--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,33 @@ body {
   font-family: inherit;
   line-height: inherit;
   margin: 0;
+
+
+  // Дублирует миксин org-scrollbar
+  &::-moz-scrollbar,
+  &::-moz-scrollbar-thumb {
+    width: 15px;
+    height: 15px;
+    border-radius: 8px;
+    background-clip: padding-box;
+    border: 5px solid transparent;
+  }
+  &::-moz-scrollbar-thumb {
+    box-shadow: inset 0 0 0 pix(5);
+    color: #808080;
+  }
+  &::-webkit-scrollbar,
+  &::-webkit-scrollbar-thumb {
+    width: 15px;
+    height: 15px;
+    border-radius: 8px;
+    background-clip: padding-box;
+    border: 5px solid transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 0 5px;
+    color: #808080;
+  }
 }
 
 h1,
@@ -134,4 +161,34 @@ org-root {
 
 .validation-error {
   border-color: rgb(220, 0, 0) !important;
+}
+
+.btn-primary {
+  height: 40px;
+  padding: 10px;
+  background-color: #003366; // $prime-blue
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+
+  &:hover {
+    background-color: #004e9d; // $second-blue
+  }
+}
+
+.btn-secondary {
+  height: 40px;
+  padding: 10px;
+  background-color: #4CAF50;; // $prime-green
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+
+  &:hover {
+    background-color: #388E3C; // $second-green
+  }
 }
