--- a/src/widgets/header/header.component.html
+++ b/src/widgets/header/header.component.html
@@ -1,8 +1,22 @@
 <div class="header">
   <org-logo [linkToMain]="true"></org-logo>
   <div class="header-buttons">
-    <button class="header-buttons_reg" (click)="goToPath('/registration')">REGISTRATION</button>
-    <button class="header-buttons_auth" (click)="goToPath('/auth')">AUTHORIZATION</button>
+    <button class="header-buttons_reg" (click)="goToPath('/registration')" [text]="{
+      ENG: 'REGISTRATION',
+      ESP: '',
+      RUS: 'РЕГИСТРАЦИЯ'
+    }">REGISTRATION</button>
+    <button class="header-buttons_auth" (click)="goToPath('/auth')" [text]="{
+      ENG: 'AUTHORIZATION',
+      ESP: '',
+      RUS: 'АВТОРИЗАЦИЯ'
+    }">AUTHORIZATION</button>
+
+    <button class="header-buttons_auth" (click)="goToPath('/profile')" [text]="{
+      ENG: 'Profile',
+      ESP: '',
+      RUS: 'Личный кабинет'
+    }">Profile</button>
     
     <org-lang></org-lang>
   </div>
