--- a/src/widgets/header/header.component.scss
+++ b/src/widgets/header/header.component.scss
@@ -25,6 +25,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      @include unselectable;
 
       button {
         position: relative;
