--- a/src/pages/authorization/components/authorization.component.scss
+++ b/src/pages/authorization/components/authorization.component.scss
@@ -14,6 +14,9 @@
     margin: 0 auto;
     background-color: $white;
     padding: 30px;
+    @include w-mobile {
+      padding: 16px;
+    }
     border: 1px solid $prime-grey;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -21,6 +24,7 @@
     h2 {
       text-align: center;
       margin-bottom: 20px;
+      font-size: 20px;
     }
   
     form {
