--- a/src/pages/profile/components/profile.component.scss
+++ b/src/pages/profile/components/profile.component.scss
@@ -21,8 +21,10 @@
   @include org-border;
 
   &-header {
+    position: relative;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     height: auto;
     border-bottom: 1px solid $transparent-grey;
     padding-bottom: 10px;
@@ -45,7 +47,7 @@
     }
 
     &_data {
-
+      
       &--name {
 
       }
@@ -56,26 +58,34 @@
 
       }
     }
-    
-    &_settings {
-      display: flex;
-      height: 40px;
-      background: none;
-      border: none;
-      margin-left: auto;
-      @include unselectable;
-      cursor: pointer;
-      
 
-      img {
-        display: block;
-        width: 30px;
-        height: 30px;
-        transition: .6s;
+    &_buttons {
+      margin-left: auto;
+
+      &--record {
+
       }
 
-      &:hover img {
-        transform: rotate(45deg);
+      &--settings {
+        display: flex;
+        height: 40px;
+        background: none;
+        border: none;
+        margin-left: auto;
+        @include unselectable;
+        cursor: pointer;
+        
+  
+        img {
+          display: block;
+          width: 30px;
+          height: 30px;
+          transition: .6s;
+        }
+  
+        &:hover img {
+          transform: rotate(45deg);
+        }
       }
     }
 
