--- a/src/pages/registration/components/registration.component.scss
+++ b/src/pages/registration/components/registration.component.scss
@@ -12,6 +12,9 @@
     max-width: 400px;
     margin: 0 auto;
     padding: 30px;
+    @include w-mobile {
+      padding: 16px;
+    }
     border: 1px solid $prime-grey;
     border-radius: 5px;
     background-color: $white;
@@ -20,7 +23,7 @@
     h2 {
       text-align: center;
       margin-bottom: 20px;
-      // @include fszP(22, 22);
+      font-size: 20px;
     }
   
     form {
