--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -193,6 +193,21 @@ org-root {
   }
 }
 
+.btn-err {
+  height: 40px;
+  padding: 10px;
+  background-color: #c70000; //  $red-color
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+
+  &:hover {
+    background-color: #8d0000; // $red-color-hover
+  }
+}
+
 .empty-image {
   background: #80808040 !important; // $transparent-grey
   height: 30px;
