--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,7 @@ $transparent-grey: #80808040;
 $super-transparent-grey: #80808020;
 $text-color: #333333;
 $red-color: #c70000;
+$red-color-hover :#8d0000;
 // Основной цвет (Темно-синий/$prime-blue): 40% - Для шапки, подвала и важных элементов управления.
 // Второстепенный цвет (Серый/$prime-grey:hover $second-green): 30% - Фон страниц, панели навигации и вспомогательные элементы.
 // Фоновый цвет (Белый/$white): 20% - Фон для основного контента и страниц.
