--- a/src/widgets/header/header.component.html
+++ b/src/widgets/header/header.component.html
@@ -1,23 +1,21 @@
 <div class="header">
   <org-logo [linkToMain]="true" [isTitle]="(isMobile$ | async) === false"></org-logo>
+
   <div class="header-buttons">
+
     <button class="header-buttons_reg" (click)="goToPath('/registration')" [text]="{
       ENG: 'REGISTRATION',
-      ESP: '',
+      ESP: 'REGISTRO',
       RUS: 'РЕГИСТРАЦИЯ'
     }">REGISTRATION</button>
     <button class="header-buttons_auth" (click)="goToPath('/auth')" [text]="{
       ENG: 'AUTHORIZATION',
-      ESP: '',
+      ESP: 'AUTORIZACIÓN',
       RUS: 'АВТОРИЗАЦИЯ'
     }">AUTHORIZATION</button>
 
-    <button class="header-buttons_auth" (click)="goToPath('/profile')" [text]="{
-      ENG: 'Profile',
-      ESP: '',
-      RUS: 'Л/К'
-    }">Profile</button>
-    
     <org-lang></org-lang>
+
+    <button class="header-buttons_auth" (click)="goToPath('/profile')"><img [srcPath]="'empty-avatar.svg'"></button>
   </div>
 </div>
