--- a/src/widgets/trusted-people/trusted-people.component.scss
+++ b/src/widgets/trusted-people/trusted-people.component.scss
@@ -67,6 +67,18 @@
           margin-right: 5px;
         }
       }
+
+      &_media {
+        height: 35px;
+        max-width: 200px;
+        margin-top: 10px;
+        color: $prime-green;
+        cursor: pointer;
+
+        &:hover {
+          color: $prime-blue;
+        }
+      }
     }
 
     &-delete {
@@ -81,5 +93,6 @@
         height: 100%;
       }
     }
+    
   }
 }
