--- a/src/features/lang/components/lang.component.html
+++ b/src/features/lang/components/lang.component.html
@@ -2,7 +2,7 @@
   <p class="lang-select">{{currentLang$i()}}</p>
 
   <div class="lang-options">
-    @for (language of languageList; track language) {
+    @for (language of languagesList; track language) {
       <span 
         (click)="setLanguage(language)" 
         class="lang-options_item"
