--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,8 +6,8 @@ $prime-green: #4CAF50;
 $second-green: #388E3C;
 $white: #FFFFFF;
 $prime-grey: #808080;
-$transparent-grey: #80808040;
-$super-transparent-grey: #80808020;
+$transparent-grey: #A0A0A0;
+$super-transparent-grey: #C0C0C0;
 $text-color: #333333;
 $red-color: #c70000;
 $red-color-hover :#8d0000;
