--- a/src/widgets/footer/components/footer.component.html
+++ b/src/widgets/footer/components/footer.component.html
@@ -1,1 +1,11 @@
-<p>© Copyright</p>
+<footer>
+  <div class="container">
+    <div class="contacts">Contacts: 
+      <br/>
+      &nbsp;&nbsp;<a href="tel:+79250737348">+7 925-073-73-48</a>
+      <br/>
+      &nbsp;&nbsp;<a href="mailto:fred_gad@mail.ru">fred_gad&#64;mail.ru</a>
+    </div>
+  </div>
+  <p class="copyright">© Copyright</p>
+</footer>
