--- a/src/pages/main/components/main.component.scss
+++ b/src/pages/main/components/main.component.scss
@@ -1,7 +1,6 @@
 @import 'mixins';
 
 :host {
-  // margin-top: 80px;
   position: relative;
 }
 
@@ -49,56 +48,6 @@
     max-width: 300px;
     font-size: 16px;
     margin-bottom: 15dvh;
-
-    &_form {  
-      font-size: 14px;
-
-      > p {
-        display: flex;
-        align-items: center;
-        
-        > * {
-          margin-right: 5px;
-          display: flex;
-          align-items: center;
-        }
-        a {
-          margin: 0;
-        }
-      }
-
-      &--label {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 3.5dvh;
-        margin-bottom: 4px;
-        color: $text-color;
-      }
-
-      input {
-        min-width: 300px;
-        margin-bottom: 6px;
-        font-size: 16px;
-      }
-      
-      p {
-
-        a {
-          @include fszV(3);
-          color: $prime-green;
-          cursor: pointer;
-        }
-        
-        span {
-          @include fszV(3);
-        }
-
-        button {
-          min-width: 200px;
-        }
-      }
-    }
   }
 
   &-first {
@@ -137,18 +86,15 @@
       color: white;
       margin-bottom: 0;
       padding: 0 16px;
-      margin-top: 60px;
+      margin-top: 40px;
     }
   }
+
   &-second {
     display: flex;
     flex-direction: column;
     background: #ffffff;
     width: 100%;
-
-    h3 {
-      font-size: 20px;
-    }
 
     .benefits {
       display: flex;
@@ -168,10 +114,6 @@
           padding: 0;
         }
 
-        &:hover {
-          padding: 10px;
-        }
-
         &_title {
           margin-bottom: 10px;
           font-size: 20px;
@@ -180,35 +122,67 @@
         &_text {
           @include fszV(2, 16);
         }
+
+        img {
+          display: flex;
+          margin: 0 auto;
+          width: 110px;
+          height: 120px;
+        }
       }
     }
 
-    .world-title {
+    .features-title {
       font-size: 20px;
       color: $prime-grey;
       margin: 0;
       padding: 0 16px;
     }
   }
-  &-third {
-    background: $prime-grey;
-    width: 100%;
-    display: flex;
-    
-    .world {
 
+  &-third {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background: $transparent-grey;
+    display: flex;
+
+    .features {
       &-text {
+        background: $prime-grey;
         padding: 16px;
         color: white;
       }
+
+      &-text:nth-child(odd) {
+        background: $transparent-grey;
+      }
     }
 
-
-    
+    .world-title {
+      color: $text-color;
+      width: 100%;
+      max-width: 900px;
+      padding: 0 16px;
+      margin: 0;
+      margin-top: 40px;
+    }
   }
+
   &-fourth {
     position: relative;
-    background: $prime-blue;
+    background: $white;
     width: 100%;
+
+
+    .world {
+      &-text {
+        color: $text-color;
+        width: 100%;
+        max-width: 900px;
+        padding: 16px;
+        margin: 0;
+      }
+    }
   }
 }
