--- a/src/widgets/footer/components/footer.component.scss
+++ b/src/widgets/footer/components/footer.component.scss
@@ -1,3 +1,23 @@
-p {
-  text-align: center;
+@import 'mixins';
+
+:host {
+  width: 100%;
+  margin-top: 40px;
+
+  footer {
+    width: 100%;
+    background: $text-color;
+
+    .container {
+      padding: 16px;
+      color: $white;
+    }
+
+    p {
+      text-align: center;
+      background: $white;
+    }
+  }
 }
+
+
