--- a/src/widgets/header/components/header.component.html
+++ b/src/widgets/header/components/header.component.html
@@ -3,11 +3,11 @@
 
   <div class="header-buttons">
 
-    <button class="header-buttons_reg" (click)="goToPath('/registration')" [text]="{
+    <!-- <button class="header-buttons_reg" (click)="goToPath('/registration')" [text]="{
       ENG: 'REGISTRATION',
       ESP: 'REGISTRO',
       RUS: 'РЕГИСТРАЦИЯ'
-    }">REGISTRATION</button>
+    }">REGISTRATION</button> -->
     <button class="header-buttons_auth" (click)="goToPath('/auth')" [text]="{
       ENG: 'AUTHORIZATION',
       ESP: 'AUTORIZACIÓN',
