--- a/src/widgets/notification-settings/components/notification-settings.component.scss
+++ b/src/widgets/notification-settings/components/notification-settings.component.scss
@@ -47,6 +47,7 @@
       color: white;
       padding: 0px 10px;
       margin-right: 5px;
+      margin-top: 4px;
       padding-bottom: 2.5px;
       border-radius: 5px;
       display: flex;
@@ -64,6 +65,7 @@
 
   &-input {
     flex: 1;
+    margin-top: 4px;
     padding: 5px;
     border: none;
     outline: none;
