--- a/src/features/image-modal/components/image-modal.component.scss
+++ b/src/features/image-modal/components/image-modal.component.scss
@@ -1,7 +1,8 @@
+@import "mixins";
 
 .modal {
   position: fixed;
-  z-index: 99999999999999;
+  z-index: $modal-zi;
   left: 0;
   top: 0;
   width: 100dvw;
