--- a/src/pages/main/components/main.component.html
+++ b/src/pages/main/components/main.component.html
@@ -4,7 +4,7 @@
   <img class="main-logo" [srcPath]="'msr-logo-phone-no-title.svg'"/>
   <img class="main-title" [srcPath]="logoTitle$i()"/>
  
-  <p class="main-text" (click)="getUsers()">
+  <p class="main-text">
     <span [text]="{
       ENG: 'MOBILE SECURITY',
       ESP: 'Есп',
