--- a/src/features/lang/components/lang.component.scss
+++ b/src/features/lang/components/lang.component.scss
@@ -21,9 +21,9 @@
   }
 
   &-options {
-    visibility: hidden; /* Элемент невидим, но все еще занимает место в макете */
-    opacity: 0; /* Полностью прозрачный */
-    transition: visibility 0s 1.5s, opacity 2s linear;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s .8s, opacity 1s linear;
 
     display: flex;
     flex-direction: column;
