--- a/src/pages/main/components/main-form/main-form.component.scss
+++ b/src/pages/main/components/main-form/main-form.component.scss
@@ -2,6 +2,16 @@
 
 :host {
 
+  .registration-profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .btn-err {
+      margin-left: 5px;
+    }
+  }
+
   > p {
     display: flex;
     align-items: center;
