--- a/src/pages/profile/components/profile.component.scss
+++ b/src/pages/profile/components/profile.component.scss
@@ -33,6 +33,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
       background-color: $transparent-grey;
       margin-right: 30px;
       @include unselectable;
@@ -44,6 +48,16 @@
       width: 80px;
       height: 80px;
       transition: .3s;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
 
     &_data {
@@ -78,8 +92,8 @@
   
         img {
           display: block;
-          width: 30px;
-          height: 30px;
+          width: 25px;
+          height: 25px;
           transition: .6s;
         }
   
