--- a/src/widgets/header/components/header.component.html
+++ b/src/widgets/header/components/header.component.html
@@ -1,18 +1,13 @@
 <div class="header">
   <org-logo [linkToMain]="true" [isTitle]="(isMobile$ | async) === false"></org-logo>
-
   <div class="header-buttons">
-
-    <!-- <button class="header-buttons_reg" (click)="goToPath('/registration')" [text]="{
-      ENG: 'REGISTRATION',
-      ESP: 'REGISTRO',
-      RUS: 'РЕГИСТРАЦИЯ'
-    }">REGISTRATION</button> -->
-    <button class="header-buttons_auth" (click)="goToPath('/auth')" [text]="{
-      ENG: 'AUTHORIZATION',
-      ESP: 'AUTORIZACIÓN',
-      RUS: 'АВТОРИЗАЦИЯ'
-    }">AUTHORIZATION</button>
+    @if (!isLoggedIn) {
+      <button class="header-buttons_auth" (click)="goToPath('/auth')" [text]="{
+        ENG: 'AUTHORIZATION',
+        ESP: 'AUTORIZACIÓN',
+        RUS: 'АВТОРИЗАЦИЯ'
+      }">AUTHORIZATION</button>
+    }
 
     <org-lang></org-lang>
 
