--- a/src/pages/main/components/main.component.html
+++ b/src/pages/main/components/main.component.html
@@ -6,20 +6,20 @@
  
   <p class="main-text">
     <span [text]="{
-      ENG: 'MOBILE SECURITY',
-      ESP: 'Есп',
-      RUS: 'МОБИЛЬНЫЙ',
-    }">MOBILE SECURITY</span>&nbsp;
+      ENG: '',
+      ESP: '',
+      RUS: '',
+    }"></span>&nbsp;
     <span class="grey" [text]="{
-      ENG: 'REMOTE',
-      ESP: 'Есп',
-      RUS: 'УДАЛЁННЫЙ',
-    }">REMOTE</span>&nbsp;
+      ENG: '',
+      ESP: '',
+      RUS: '',
+    }"></span>&nbsp;
     <span [text]="{
-      ENG: 'RECORDER',
-      ESP: 'Есп',
-      RUS: 'РЕГИСТРАТОР',
-    }">RECORDER</span>
+      ENG: '',
+      ESP: '',
+      RUS: '',
+    }"></span>
   </p>
 
   <div class="main-registration flex">
@@ -40,13 +40,7 @@
   </h3>
   <div class="main-first flex wrapper">
     <p class="main-first_text container" [text]="text['innovative']">
-      Mobile Security Remote Recorder is an innovative safety solution designed to empower
-      individuals with the ability to discreetly initiate video and audio recordings from their phone,
-      instantly uploading the footage to a secure server. This cutting-edge system is tailored for moments
-      when capturing and preserving real-time events is crucial for security and evidence purposes.
-      Whether you're facing a threat, witnessing a critical incident, or simply want to ensure your
-      safety in uncertain situations,MSR provides an immediate and secure way to record and store evidence
-      without drawing attention.
+
     </p>
 
     <h3 class="benefits-title container" [text]="{
@@ -66,8 +60,7 @@
           RUS: 'Для повседневных героев',
         }">For Everyday Heroes</div>
         <div class="benefits-item_text" [text]="text['citizen']">
-          Whether you're a concerned citizen witnessing an injustice or someone who frequently finds
-          themselves in situations where safety is a concern, MSR empowers you to act swiftly and securely.
+
         </div>
       </div>
       <div class="benefits-item">
@@ -78,8 +71,7 @@
           RUS: 'Для профессионалов в опасных профессиях',
         }">For Professionals in the Field</div>
         <div class="benefits-item_text" [text]="text['journalists']">
-          Journalists, private investigators, and security personnel can utilize MSR to discreetly gather
-          evidence and record events without compromising their position or safety.
+
         </div>
       </div>
       <div class="benefits-item">
@@ -90,8 +82,7 @@
           RUS: 'Для искателей приключений',
         }">For Adventure Seekers</div>
         <div class="benefits-item_text" [text]="text['adventurers']">
-          Adventurers and explorers venturing into remote or potentially risky environments can rely on
-          MSR for documenting encounters and ensuring a digital footprint of their journey is securely preserved.
+
         </div>
       </div>
       <div class="benefits-item">
@@ -102,8 +93,6 @@
           RUS: 'Для людей, заботящихся о персональной безопасности',
         }">For the Safety-Conscious Individual</div>
         <div class="benefits-item_text" [text]="text['anyone']">
-          Anyone who values personal safety and the peace of mind knowing they can discreetly
-          record situations that feel unsafe or threatening will find MSR indispensable.
         </div>
       </div>
     </div>
@@ -118,23 +107,20 @@
   <div class="main-third flex wrapper">
     <div class="features container">
       <div class="features-text" [text]="text['discreet']">
-        Discreet Activation: Initiate recordings without drawing attention to your actions, providing a covert means to document events.
+       
       </div>
 
       <div class="features-text" [text]="text['immediate']">
-        Immediate Upload: Seamlessly upload your recordings to a secure server, ensuring your evidence is safe, sound, and accessible when needed.
+       
       </div>
 
       <div class="features-text" [text]="text['friendly']">
-        Alerting Trusted Individuals: A system designed for emergency notifications to those you trust.
       </div>
 
       <div class="features-text" [text]="text['quality']">
-        High-Quality Recordings: Capture clear and comprehensive audio and video recordings, crucial for evidence and clarity.
       </div>
 
       <div class="features-text" [text]="text['advanced']">
-        Advanced Security Protocols: With state-of-the-art encryption and privacy measures, your recordings are only accessible to you and those you choose to share them with.
       </div>
     </div>
 
@@ -148,10 +134,6 @@
   <div class="main-fourth flex wrapper">
     <div class="world container">
       <div class="world-text" [text]="text['world']">
-        In a world where uncertainty can loom around any corner, MSR offers more than just a recording application; 
-        it's a commitment to personal safety and security. Our platform is built on the foundation of discretion, 
-        reliability, and immediate response to ensure that your recordings are made securely and uploaded instantly 
-        for evidence preservation.
       </div>
     </div>
   </div>
