--- a/src/pages/video-page/components/video-page.component.html
+++ b/src/pages/video-page/components/video-page.component.html
@@ -32,10 +32,10 @@
         }">Stop recording</button>
       } @else {
         <button (click)="startRecording()" class="btn-secondary" [text]="{
-          ENG: 'Start recording on a remote server',
-          ESP: 'Comience a grabar en un servidor remoto',
-          RUS: 'Начать запись на удалённый сервер',
-        }">Start recording on a remote server</button>
+          ENG: 'Start recording',
+          ESP: 'Comience a grabar',
+          RUS: 'Начать запись',
+        }">Start recording</button>
       }
     </div>
   </div>
